--- a/src/chemistry.liquid
+++ b/src/chemistry.liquid
@@ -1,17 +1,19 @@
 ---
-title: Chemistry Prizes
+title: Nobel Prizes in Chemistry
 layout: base
 ---
-{% comment %}
-https://api.nobelprize.org/2.1/nobelPrizes?nobelPrizeYear=2000&yearTo=2022&nobelPrizeCategory=che&sort=desc
-{% endcomment %}
-
 {% for prize in chemistry.nobelPrizes %}
-  <h3>{{ prize.categoryFullName.en }} {{ prize.awardYear }}</h3>
+  <p>{{ prize.awardYear }}</p>
   <ul class="listing">
-    {% for person in prize.laureates %}
+    {% for laureate in prize.laureates %}
       <li>
-        <span class="name">{{ person.knownName.en }}</span><br/><span class="motivation">{{ person.motivation.en }}</span>
+        <span class="name">
+          {% if laureate.knownName.en %}
+            {{ laureate.knownName.en }}
+          {% elsif laureate.orgName.en %}
+            {{ laureate.orgName.en }}{% endif %}
+        </span><br/>
+        <span class="motivation">{{ laureate.motivation.en }}</span>
       </li>
     {% endfor %}
   </ul>
