--- a/src/index.liquid
+++ b/src/index.liquid
@@ -12,12 +12,13 @@ layout: base
     <code>src/_data/chemistry.json</code>
   </li>
   <li>
-    <a href="prizes-list/">List of Prizes Awarded in the 21st Century</a>
+    First take:
+    <a href="prizes-list-take1/">List of Nobel Psizes</a>
     <br/>
     generated from
     <code>src/_data/prizes.js</code>
     and
-    <code>src/prizes-list.liquid</code>,
-    which includes pagination and creating a "prizes" collection.
+    <code>src/prizes-list-take1.liquid</code>
   </li>
+  
 </ul>
