end of class on 2/14/2023

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -13,12 +13,21 @@ layout: base
   </li>
   <li>
     First take:
-    <a href="prizes-list-take1/">List of Nobel Psizes</a>
+    <a href="prizes-list/">List of Nobel Psizes</a>
     <br/>
     generated from
     <code>src/_data/prizes.js</code>
     and
-    <code>src/prizes-list-take1.liquid</code>
+    <code>src/prizes-list.liquid</code>
   </li>
-  
+  <li>
+    Second take:
+    <a href="prizes-collection/">List of Nobel Psizes</a>
+    <br/>
+    generated from collections!
+    <code>src/_data/prizes.js</code>
+    and
+    <code>src/prizes-collection.liquid</code>
+  </li>
+
 </ul>
