end of class 2023-02-14

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -22,11 +22,10 @@ layout: base
   </li>
   <li>
     Second take:
-    <a href="prizes-collection/">List of Nobel Psizes</a>
+    <a href="prizes-collection/">List of Nobel Prizes</a>
     <br/>
-    generated from collections!
-    <code>src/_data/prizes.js</code>
-    and
+    generated using collections (created by tags during pagination
+    <code>src/prizes.liquid</code>) and
     <code>src/prizes-collection.liquid</code>
   </li>
 
