end of bonus segment for render and shortcodes

--- a/src/chemistry.liquid
+++ b/src/chemistry.liquid
@@ -4,14 +4,5 @@ layout: base
 ---
 {% for prize in chemistry.nobelPrizes %}
   <p>{{ prize.awardYear }}</p>
-  <ul class="listing">
-    {% for laureate in prize.laureates %}
-      <li>
-        <span class="name">
-          {{ laureate.knownName.en }}
-        </span><br/>
-        <span class="motivation">{{ laureate.motivation.en }}</span>
-      </li>
-    {% endfor %}
-  </ul>
+  {% render "laureates" with prize.laureates as laureatesList %}
 {% endfor %}
