--- a/src/prizes.liquid
+++ b/src/prizes.liquid
@@ -12,15 +12,4 @@ tags:
 eleventyComputed:
   title: "{{ prize.awardYear }} {{ prize.categoryFullName.en }}"
 ---
-
-<h2>{{ prize.awardYear }} {{ prize.category.en }}</h2>
-<ul class="listing">
-  {% for laureate in prize.laureates %}
-    <li>
-      <span class="name">
-        {{ laureate.knownName.en }}
-      </span><br/>
-      <span class="motivation">{{ laureate.motivation.en }}</span>
-    </li>
-  {% endfor %}
-</ul>
+{% render "laureates" with prize.laureates as laureatesList %}
