--- a/src/prizes-list.liquid
+++ b/src/prizes-list.liquid
@@ -4,14 +4,5 @@ layout: base
 ---
 {% for prize in prizes.nobelPrizes %}
   <h2>{{ prize.awardYear }} {{ prize.category.en }}</h2>
-  <ul class="listing">
-    {% for laureate in prize.laureates %}
-      <li>
-        <span class="name">
-          {{ laureate.knownName.en }}
-        </span><br/>
-        <span class="motivation">{{ laureate.motivation.en }}</span>
-      </li>
-    {% endfor %}
-  </ul>
+  {% render "laureates" with prize.laureates as laureatesList %}
 {% endfor %}
