--- a/src/index.liquid
+++ b/src/index.liquid
@@ -13,7 +13,7 @@ layout: base
   </li>
   <li>
     First take:
-    <a href="prizes-list/">List of Nobel Psizes</a>
+    <a href="prizes-list/">List of Nobel Prizes</a>
     <br/>
     generated from
     <code>src/_data/prizes.js</code>
