--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -2,6 +2,6 @@
   <p>This work is part of CSCI E-114, Web application development with Jamstack, Harvard Extension School
   </p>
   <p>Information for this site comes from the
-    <a href="https://about.usps.com/who/profilehttps://www.nobelprize.org/about/developer-zone-2/">The Nobel Prize | Developer Zone</a>
+    <a href="https://www.nobelprize.org/about/developer-zone-2/">The Nobel Prize | Developer Zone</a>
   </p>
 </footer>
